--- a/index.html
+++ b/index.html
@@ -50,7 +50,15 @@
                 <div class="languages">
                     <h2 class="titulo">DISPONIBILIDAD</h2>
                     <p>Inmediata</p>
+                </div>
+            </section>
 
+            <!-- REFERENCIAS -->
+            <section class="informacion__altura">
+                <div class="languages">
+                    <h2 class="titulo">REFERENCIAS</h2>
+                    <p class="bi bi-whatsapp"> Emanuel - 2494-646684</p>
+                    <p class="bi bi-whatsapp"> Agustina - 2494-619334</p>
                 </div>
             </section>
         </div>
