--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="ancho-cv">
         <div class="col__left"> <img src="foto juanchy.jpg" loading="lazy" alt="foto mia">
 
             <!-- CONTACTOS -->
