acomodando habilidades y conocimientos

--- a/index.html
+++ b/index.html
@@ -105,8 +105,10 @@
             <section class="work">
                 <div class="work">
                     <h2 class="titulo">HABILIDADES Y CONOCIMIENTOS</h2>
-                    <p><b>Computacion</b> - Uso de aplicaciones y programas en general, mantenimiento de software y
-                        hardware, conocimientos en el manejo de redes sociales.</p>
+                    <p><b>Computacion</b> - Soy un profesional altamente competente en el manejo de computadoras y
+                        aplicaciones, con habilidades destacadas en el mantenimiento de software y hardware. Además,
+                        poseo un amplio conocimiento en el manejo estratégico de redes sociales, permitiéndome crear y
+                        gestionar contenido de manera eficiente.</p>
                 </div>
             </section>
 
