agregando un poco de info a todo

--- a/index.html
+++ b/index.html
@@ -90,11 +90,14 @@
                     <p><b>Escuela Media Nº 8</b> - Titulo de Técnico en Comunicación Multimedial</p>
 
                     <h3>Cursos De Programacion</h3>
-                    <p><b>Instituto Amemt - Front-End Web Developer</b> : Cursos online 6 meses basados en practicas y
-                        proyectos reales - Conocimientos en Html, Css, Sass, Bootstrap, JavaScript, Git y Vue <br />
+                    <p><b>Instituto Amemt - Front-End Web Developer</b> : Cursos online de 6 meses basados en prácticas
+                        y proyectos reales. Amplia experiencia en el desarrollo web utilizando HTML, CSS, Sass,
+                        Bootstrap y JavaScript. Familiarizado con el control de versiones Git y el framework Vue para
+                        crear interfaces interactivas y dinámicas.<br />
                         <b>Plan 111 Mil -
-                            Titulo de Analista del Conocimiento</b> : Cursos presenciales + 600 horas basados en
-                        practicas y proyectos reales - Conocimientos en Java y MySql
+                            Titulo de Analista del Conocimiento</b> : Cursos presenciales de más de 600 horas, enfocados
+                        en prácticas y proyectos reales. Amplia experiencia en el desarrollo con Java y MySql, creando
+                        soluciones robustas y eficientes en el manejo de datos y aplicaciones.
                     </p>
                 </div>
             </section>
@@ -105,10 +108,9 @@
             <section class="work">
                 <div class="work">
                     <h2 class="titulo">HABILIDADES Y CONOCIMIENTOS</h2>
-                    <p><b>Computacion</b> - Soy un profesional altamente competente en el manejo de computadoras y
-                        aplicaciones, con habilidades destacadas en el mantenimiento de software y hardware. Además,
-                        poseo un amplio conocimiento en el manejo estratégico de redes sociales, permitiéndome crear y
-                        gestionar contenido de manera eficiente.</p>
+                    <p><b>Computacion</b> - Soy experto en el campo de la computación, con habilidades destacadas en el
+                        uso de aplicaciones y programas, mantenimiento de software y hardware. Además, poseo
+                        conocimiento en el manejo de redes sociales.</p>
                 </div>
             </section>
 
