actializando cv atencion al publico con grido

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                     <h2 class="titulo">REFERENCIAS</h2>
                     <p class="bi bi-whatsapp"> Emanuel - 2494-646684</p>
                     <p class="bi bi-whatsapp"> Agustina - 2494-619334</p>
+                    <p class="bi bi-whatsapp"> Jose - 2494-490864</p>
                 </div>
             </section>
         </div>
@@ -120,13 +121,21 @@
             <section class="work">
                 <div class="work">
                     <h2 class="titulo">EXPERIENCIA LABORAL</h2>
-                    <p><b>Grido Helado y Lacteos Luz Azul</b> - Responsable de descargar y trasladar las cajas desde el
-                        lugar de almacenamiento al lugar de
-                        destino. Garantizar la integridad de la carga durante todo el
+                    <p><b> Lacteos Luz Azul</b> - Responsable de descargar y trasladar las cajas desde el
+                        lugar de almacenamiento al lugar de destino. Garantizar la integridad de la carga durante todo
+                        el
                         proceso de descarga y colaborar con otros miembros del equipo para completar la tarea en un
                         plazo
                         determinado. Demuestro un alto nivel de compromiso y perseverancia para asegurar que se
                         cumplan las expectativas de los clientes.
+                    </p>
+                    <p><b>Grido Helado </b> - Adquirí valiosas habilidades en
+                        atención al cliente mientras servía helados y tomaba pedidos. Además, demostré
+                        eficiencia en el
+                        manejo de la caja registradora y en la ejecución del proceso de cierre de caja. Contribuí
+                        activamente al mantenimiento y limpieza del establecimiento, asegurando un ambiente agradable
+                        para los clientes. Asimismo, asumí la responsabilidad de reponer el inventario de helados,
+                        garantizando un suministro constante y satisfaciendo la demanda de manera efectiva.
                     </p>
                 </div>
             </section>
