optimizando el codigo con chat-gpt

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
 <body>
     <div class="ancho-cv">
-        <div class="col__left"> <img src="foto juanchy.jpg" loading="lazy" alt="foto mia">
+        <div class="col__left">
+            <img src="foto juanchy.jpg" loading="lazy" alt="foto mia">
 
-            <!-- CONTACTOS -->
-            <section class="contacts__altura ">
-                <div class="contacts ">
+            <section class="contacts__altura">
+                <div class="contacts">
                     <h2 class="titulo">CONTACTOS</h2>
                     <p class="bi bi-envelope-fill"> juanmaynard91@gmail.com</p>
                     <p class="bi bi-envelope-fillbi bi-linkedin"> linkedin.com/in/juan-maynard</p>
@@ -28,7 +28,6 @@
                 </div>
             </section>
 
-            <!-- IDIOMAS -->
             <section class="languages__altura">
                 <div class="languages">
                     <h2 class="titulo">IDIOMAS</h2>
@@ -37,7 +36,6 @@
                 </div>
             </section>
 
-            <!-- INFORMACION ADICIONAL -->
             <section class="informacion__altura">
                 <div class="languages">
                     <h2 class="titulo">OTROS DATOS</h2>
@@ -53,7 +51,6 @@
                 </div>
             </section>
 
-            <!-- REFERENCIAS -->
             <section class="informacion__altura">
                 <div class="languages">
                     <h2 class="titulo">REFERENCIAS</h2>
@@ -64,11 +61,9 @@
             </section>
         </div>
 
-
         <div class="col__right">
             <h1 class="titulo nombre">JUAN ROGELIO MAYNARD</h1>
 
-            <!-- SOBRE MI -->
             <hr>
 
             <section class="about">
@@ -83,7 +78,6 @@
 
             <hr>
 
-            <!-- ESTUDIOS -->
             <section class="training">
                 <div class="training">
                     <h2 class="titulo">FORMACION ACADEMICA</h2>
@@ -105,7 +99,6 @@
 
             <hr>
 
-            <!-- TRABAJOS -->
             <section class="work">
                 <div class="work">
                     <h2 class="titulo">HABILIDADES Y CONOCIMIENTOS</h2>
@@ -117,7 +110,6 @@
 
             <hr>
 
-            <!-- TRABAJOS -->
             <section class="work">
                 <div class="work">
                     <h2 class="titulo">EXPERIENCIA LABORAL</h2>
@@ -142,7 +134,6 @@
 
             <hr>
 
-            <!-- TRABAJOS -->
             <section class="work">
                 <div class="work">
                     <h2 class="titulo">VOLUNTARIADO</h2>
